# LAA

./: .gitignore  Dockerfile  README.md  api.py  app.py  deploy.py  gaps-reports.md  laa_business_strategy.tsx.txt  laa_immediate_action.md  laa_technical_deepdive.md  learning_augmented_algorithms (1).md  packages.txt  project_overview.md  requirements-hf.txt  requirements.txt  sdk.py  technical_spec.md  test_wrapper.py
api/: main.py  test_main.py
laa_core/: Cargo.toml
laa_core/benches/: caching.rs  oneway_trading.rs  scheduling.rs  search.rs  ski_rental.rs
laa_core/src/: lib.rs
laa_tools/: brittleness_detector.py  uq_prediction_adapter.py
sdk/: setup.py  test_sdk.py
sdk/laa_sdk/: __init__.py
tests/: test_brittleness_detector.py  test_guarantees.py
