[package]
name = "laa_core"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ski_rental"
harness = false

[[bench]]
name = "caching"
harness = false

[[bench]]
name = "oneway_trading"
harness = false

[[bench]]
name = "scheduling"
harness = false

[[bench]]
name = "search"
harness = false

[lib]
name = "laa_core"
crate-type = ["cdylib", "rlib"]
